--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "test",
+  "name": "hee-ui",
   "version": "0.1.0",
-  "private": true,
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,14 +16,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass-variable-loader": "^0.1.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "build": "rollup -c",
     "styleguide": "styleguidist server",
     "build:docs": "styleguidist build"
   },
@@ -45,7 +44,20 @@
     ]
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@rollup/plugin-url": "^6.1.0",
+    "@svgr/rollup": "^5.5.0",
+    "postcss": "^8.3.6",
     "react-styleguidist": "^11.1.7",
+    "rollup": "^2.55.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-sass-variables": "^0.1.1",
     "webpack": "4.44.2"
   }
 }
