--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
       "^helpers(.*)$": "<rootDir>/src/helpers/$1",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less|sass|scss)$": "identity-obj-proxy"
-    }
+    },
+    "collectCoverageFrom" : [
+      "src/**/*.tsx",
+      "src/**/*.ts"
+    ]
   },
   "eslintConfig": {
     "extends": [
