--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less|sass|scss)$": "identity-obj-proxy"
     },
-    "collectCoverageFrom" : [
+    "collectCoverageFrom": [
       "src/**/*.tsx",
       "src/**/*.ts"
     ]
@@ -75,6 +75,7 @@
     "@rollup/plugin-typescript": "^8.2.5",
     "@rollup/plugin-url": "^6.1.0",
     "@svgr/rollup": "^5.5.0",
+    "@types/styled-components": "^5.1.11",
     "babel-jest": "^27.0.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
