--- a/package.json
+++ b/package.json
@@ -1,97 +1,145 @@
 {
-  "name": "hee-ui",
-  "version": "0.1.0",
+  "name": "MDwalks-UI",
+  "version": "0.15.4",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "clsx": "^1.1.1",
-    "lodash": "^4.17.21",
-    "node-sass": "^5.0.0",
-    "react": "^16",
-    "react-dom": "^16",
-    "react-scripts": "4.0.3",
-    "sass-variable-loader": "^0.1.2",
-    "styled-components": "^5.3.0",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
   "scripts": {
     "test": "jest --coverage",
+    "test:watch": "jest --watch --coverage",
     "build": "rollup -c",
     "styleguide": "styleguidist server",
-    "build:docs": "styleguidist build"
+    "build:docs": "styleguidist build",
+    "eslint": "eslint ./src/**/*.js ./src/**/**/*.js",
+    "eslint:fix": "eslint ./src/**/*.js ./src/**/**/*.js --fix",
+    "clear:branch": "git branch --merged | grep -v \\* | xargs -n 1 git branch -d",
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && yarn build && yarn build:docs && git add .",
+    "docstart": "docusaurus start -p 8942",
+    "docbuild": "docusaurus build"
   },
   "jest": {
-    "testEnvironment": "jsdom",
+    "testPathIgnorePatterns": [
+      "<rootDir>/src/components/__tests__/__snapshots__/",
+      "<rootDir>/src/components/__tests__/utils.js"
+    ],
     "setupFilesAfterEnv": [
       "<rootDir>/setupTest.js"
     ],
     "moduleNameMapper": {
-      "^components(.*)$": "<rootDir>/src/components/$1",
-      "^helpers(.*)$": "<rootDir>/src/helpers/$1",
+      "^@src(.*)$": "<rootDir>/src/$1",
+      "^@assets(.*)$": "<rootDir>/src/assets/$1",
+      "^@components(.*)$": "<rootDir>/src/components/$1",
+      "^@helpers(.*)$": "<rootDir>/src/helpers/$1",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less|sass|scss)$": "identity-obj-proxy"
-    },
-    "collectCoverageFrom": [
-      "src/**/*.tsx",
-      "src/**/*.ts"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "**comment_pre-commit**": "lint-staged",
+      "pre-push": "yarn eslint && yarn test"
+    }
+  },
+  "**comment_lint-staged**": {
+    "./src/**/*.js": [
+      "eslint --fix",
+      "git add"
     ]
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "repository": "https://github.com/linewalks/MDwalks-UI.git",
+  "keywords": [
+    "data",
+    "react",
+    "charts"
+  ],
+  "author": "linewalks",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.9",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.14.5",
-    "@rollup/plugin-alias": "^3.1.5",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
+    "@babel/core": "^7.5.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.5.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.12.7",
+    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@rollup/plugin-url": "^6.1.0",
-    "@svgr/rollup": "^5.5.0",
-    "@types/styled-components": "^5.1.11",
-    "babel-jest": "^27.0.6",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-typescript": "^8.0.0",
+    "@rollup/plugin-url": "^6.0.0",
+    "@svgr/webpack": "^5.5.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.165",
+    "@types/node-sass": "^4.11.1",
+    "@types/react": "^16.9.46",
+    "@types/styled-components": "^5.1.2",
+    "autoprefixer": "^10.2.4",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "css-loader": "4.3.0",
+    "enzyme-to-json": "^3.4.0",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "husky": "^3.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.6",
+    "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.1",
-    "jest-each": "^27.0.6",
-    "jest-styled-components": "^7.0.5",
-    "jsdom": "^16.7.0",
-    "postcss": "^8.3.6",
-    "react-styleguidist": "^11.1.7",
-    "react-testing-library": "^8.0.1",
-    "rollup": "^2.55.1",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-sass-variables": "^0.1.1",
+    "jest-styled-components": "^6.3.3",
+    "lint-staged": "^9.4.3",
+    "minimist": "^1.2.2",
+    "node-sass": "^4.13.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "sass-loader": "^10.0.4",
+    "sass-variables-loader": "^0.1.3",
+    "scheduler": "0.14.0",
+    "style-loader": "^2.0.0",
+    "ts-jest": "^26.5.0",
+    "ts-loader": "^8.0.15",
+    "url-loader": "^4.1.1",
     "webpack": "4.44.2"
+  },
+  "dependencies": {
+    "@docusaurus/core": "2.0.0-alpha.70",
+    "@docusaurus/preset-classic": "2.0.0-alpha.70",
+    "@mdx-js/react": "^1.6.21",
+    "@types/d3": "5.16.4",
+    "antd": "^3.23.4",
+    "clsx": "^1.1.1",
+    "conventional-changelog-cli": "^2.0.28",
+    "d3": "^5.9.7",
+    "d3-sankey-circular": "^0.34.0",
+    "d3-simple-slider": "^1.5.4",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "highcharts": "^7.1.2",
+    "highcharts-react-official": "^2.2.2",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dom": "^16.9.0",
+    "react-styleguidist": "^10.6.1",
+    "react-test-renderer": "^16.8.6",
+    "react-transition-group": "^4.3.0",
+    "recharts": "1.8.5",
+    "regenerator-runtime": "^0.13.7",
+    "rollup": "^2.34.2",
+    "styled-components": "^4.3.2",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.2"
+  },
+  "peerDependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.2"
   }
 }
