--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@rollup/plugin-url": "^6.0.0",
+    "@svgr/rollup": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -88,6 +89,7 @@
     "minimist": "^1.2.2",
     "node-sass": "^4.13.1",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-sass-variables": "^0.1.1",
     "sass-loader": "^10.0.4",
     "sass-variables-loader": "^0.1.3",
     "scheduler": "0.14.0",
