--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/lodash": "^4.14.165",
     "@types/node-sass": "^4.11.1",
     "@types/react": "^16.9.46",
+    "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.2",
     "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.0.3",
