--- a/package.json
+++ b/package.json
@@ -98,7 +98,14 @@
     "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.15",
     "url-loader": "^4.1.1",
-    "webpack": "4.44.2"
+    "webpack": "4.44.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-styleguidist": "^10.6.1",
+    "react-test-renderer": "^16.8.6",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.70",
@@ -111,24 +118,17 @@
     "d3": "^5.9.7",
     "d3-sankey-circular": "^0.34.0",
     "d3-simple-slider": "^1.5.4",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "highcharts": "^7.1.2",
     "highcharts-react-official": "^2.2.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^16.9.0",
-    "react-styleguidist": "^10.6.1",
-    "react-test-renderer": "^16.8.6",
     "react-transition-group": "^4.3.0",
     "recharts": "1.8.5",
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.34.2",
     "styled-components": "^4.3.2",
-    "tslib": "^2.0.3",
-    "typescript": "^4.1.2"
+    "tslib": "^2.0.3"
   },
   "peerDependencies": {
     "react": "^16.9.0",
