--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "collectCoverageFrom": [
       "src/**/*.tsx",
       "src/**/*.ts"
-    ]
+    ],
+    "testResultsProcessor": "jest-sonar-reporter"
   },
   "keywords": [
     "data",
@@ -73,6 +74,8 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "4.3.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -85,10 +88,15 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.1",
+    "jest-sonar-reporter": "^2.0.0",
     "jest-styled-components": "^6.3.3",
     "lint-staged": "^9.4.3",
     "minimist": "^1.2.2",
     "node-sass": "^4.13.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-styleguidist": "^10.6.1",
+    "react-test-renderer": "^16.8.6",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-sass-variables": "^0.1.1",
     "sass-loader": "^10.0.4",
@@ -97,15 +105,9 @@
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.15",
+    "typescript": "^4.1.2",
     "url-loader": "^4.1.1",
-    "webpack": "4.44.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-styleguidist": "^10.6.1",
-    "react-test-renderer": "^16.8.6",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "typescript": "^4.1.2"
+    "webpack": "4.44.2"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-alpha.70",
