--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/core": "^7.5.4",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.12.7",
@@ -69,7 +70,6 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.2",
-    "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
@@ -93,16 +93,18 @@
     "lint-staged": "^9.4.3",
     "minimist": "^1.2.2",
     "node-sass": "^4.13.1",
+    "postcss": "^8.3.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-styleguidist": "^10.6.1",
     "react-test-renderer": "^16.8.6",
-    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-postcss": "4.0",
     "rollup-plugin-sass-variables": "^0.1.1",
     "sass-loader": "^10.0.4",
     "sass-variables-loader": "^0.1.3",
     "scheduler": "0.14.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.2.19",
     "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.15",
     "typescript": "^4.1.2",
@@ -110,11 +112,14 @@
     "webpack": "4.44.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.16.0",
+    "@babel/runtime-corejs3": "^7.16.0",
     "@docusaurus/core": "2.0.0-alpha.70",
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
     "@mdx-js/react": "^1.6.21",
     "@types/d3": "5.16.4",
     "antd": "^3.23.4",
+    "autoprefixer": "9.8.6",
     "clsx": "^1.1.1",
     "conventional-changelog-cli": "^2.0.28",
     "d3": "^5.9.7",
@@ -123,6 +128,7 @@
     "highcharts": "^7.1.2",
     "highcharts-react-official": "^2.2.2",
     "lodash": "^4.17.21",
+    "postcss-loader": "4.0",
     "prop-types": "^15.7.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-transition-group": "^4.3.0",
@@ -133,6 +139,7 @@
     "tslib": "^2.0.3"
   },
   "peerDependencies": {
+    "postcss": "^8.3.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "tslib": "^2.0.3",
