--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,17 @@
 {
   "presets": [
     ["@babel/preset-env", {
-      "targets": {
-        "node": "current"
-      }
+      "modules": false
     }],
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
   "plugins": [
+    ["@babel/plugin-transform-runtime",
+      {
+        "corejs" : { "version" : 3, "proposals": true }
+      }
+    ],
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import",
     ["module-resolver", {
