--- a/package.json
+++ b/package.json
@@ -1,8 +1,36 @@
 {
-  "name": "UI",
+  "name": "lwds",
   "version": "0.0.1",
+  "description": "Linewalks Design System",
+  "keywords": [
+    "lwds",
+    "linewalks design",
+    "css",
+    "react-component",
+    "component",
+    "design",
+    "frontend",
+    "react"
+  ],
+  "homepage": "",
+  "bugs": {
+    "url": "https://github.com/linewalks/ui/issues",
+    "email": "system@linewalks.com"
+  },
+  "license": "MIT",
+  "contributors": [
+    "Jungwoo <jungwoo@linewalks.com> (https://linewalks.com)",
+    "lahee <lahee@linewalks.com> (https://linewalks.com)",
+    "jh.lee <jh.lee@linewalks.com> (https://linewalks.com)",
+    "leetaehee <leetaehee@linewalks.com> (https://linewalks.com)",
+    "seonyeong <seonyeong@linewalks.com> (https://linewalks.com)"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/linewalks/ui.git"
+  },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch --coverage",
@@ -38,13 +66,6 @@
     ],
     "testResultsProcessor": "jest-sonar-reporter"
   },
-  "keywords": [
-    "data",
-    "react",
-    "charts"
-  ],
-  "author": "linewalks",
-  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
@@ -144,5 +165,8 @@
     "react-dom": "^16.9.0",
     "tslib": "^2.0.3",
     "typescript": "^4.1.2"
+  },
+  "engines": {
+    "node": "12.x || 14.x"
   }
 }
