--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "react-test-renderer": "^16.8.6",
     "rollup-plugin-postcss": "4.0",
     "rollup-plugin-sass-variables": "^0.1.1",
+    "rollup-plugin-terser": "^7.0.2",
     "sass-loader": "^10.0.4",
     "sass-variables-loader": "^0.1.3",
     "scheduler": "0.14.0",
@@ -139,15 +140,9 @@
     "@docusaurus/core": "2.0.0-alpha.70",
     "@docusaurus/preset-classic": "2.0.0-alpha.70",
     "@mdx-js/react": "^1.6.21",
-    "@types/d3": "5.16.4",
     "antd": "^3.23.4",
     "clsx": "^1.1.1",
     "conventional-changelog-cli": "^2.0.28",
-    "d3": "^5.9.7",
-    "d3-sankey-circular": "^0.34.0",
-    "d3-simple-slider": "^1.5.4",
-    "highcharts": "^7.1.2",
-    "highcharts-react-official": "^2.2.2",
     "lodash": "^4.17.21",
     "postcss-loader": "4.0",
     "prop-types": "^15.7.2",
