--- a/.babelrc
+++ b/.babelrc
@@ -1,26 +1,35 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "modules": false
-    }],
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
+    ],
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
   "plugins": [
-    ["@babel/plugin-transform-runtime",
+    [
+      "@babel/plugin-transform-runtime",
       {
-        "corejs" : { "version" : 3, "proposals": true }
+        "corejs": { "version": 3, "proposals": true }
       }
     ],
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import",
-    ["module-resolver", {
-      "alias": {
-        "@src": "./src",
-        "@assets": "./src/assets",
-        "@components": "./src/components",
-        "@helpers": "./src/helpers"
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "@src": "./src",
+          "@assets": "./src/assets",
+          "@components": "./src/components",
+          "@helpers": "./src/helpers"
+        }
       }
-    }]
+    ]
   ]
 }
