--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "eslint": "eslint ./src/**/*.js ./src/**/**/*.js",
     "eslint:fix": "eslint ./src/**/*.js ./src/**/**/*.js --fix",
     "clear:branch": "git branch --merged | grep -v \\* | xargs -n 1 git branch -d",
-    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && NODE_ENV=production yarn build && yarn build:docs && git add .",
-    "docstart": "docusaurus start -p 8942",
-    "docbuild": "docusaurus build"
+    "version": "conventional-changelog -p angular -i CHANGELOG.md -s && NODE_ENV=production yarn build && yarn build:docs && git add ."
   },
   "jest": {
     "testPathIgnorePatterns": [
@@ -61,8 +59,8 @@
       "\\.(css|less|sass|scss)$": "identity-obj-proxy"
     },
     "collectCoverageFrom": [
-      "src/**/*.tsx",
-      "src/**/*.ts"
+      "./src/**/*.tsx",
+      "./src/**/*.ts"
     ],
     "testResultsProcessor": "jest-sonar-reporter"
   },
@@ -95,6 +93,7 @@
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-preset-react-app": "^10.0.0",
     "css-loader": "4.3.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -120,9 +119,12 @@
     "react-dom": "^16.9.0",
     "react-styleguidist": "^10.6.1",
     "react-test-renderer": "^16.8.6",
+    "rollup": "^2.34.2",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "4.0",
     "rollup-plugin-sass-variables": "^0.1.1",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.0",
     "sass-loader": "^10.0.4",
     "sass-variables-loader": "^0.1.3",
     "scheduler": "0.14.0",
@@ -130,15 +132,13 @@
     "tailwindcss": "^2.2.19",
     "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.15",
-    "typescript": "^4.1.2",
+    "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
     "webpack": "4.44.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.0",
     "@babel/runtime-corejs3": "^7.16.0",
-    "@docusaurus/core": "2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "2.0.0-alpha.70",
     "@mdx-js/react": "^1.6.21",
     "antd": "^3.23.4",
     "clsx": "^1.1.1",
@@ -152,7 +152,7 @@
     "regenerator-runtime": "^0.13.7",
     "rollup": "^2.34.2",
     "styled-components": "^4.3.2",
-    "tslib": "^2.0.3"
+    "tslib": "^2.3.1"
   },
   "peerDependencies": {
     "postcss": "^8.3.11",
