--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lwds",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Linewalks Design System",
   "keywords": [
     "lwds",
@@ -31,6 +31,12 @@
     "type": "git",
     "url": "https://github.com/linewalks/lwds.git"
   },
+  "files": [
+    "dist",
+    "lib",
+    "!dist/test",
+    "!dist/types"
+  ],
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch --coverage",
