package : setting hompage url

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "frontend",
     "react"
   ],
-  "homepage": "",
+  "homepage": "https://linewalks.github.io/lwds/",
   "bugs": {
     "url": "https://github.com/linewalks/lwds/issues",
     "email": "system@linewalks.com"
