--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "sass-loader": "^10.0.4",
     "sass-variables-loader": "^0.1.3",
     "scheduler": "0.14.0",
+    "standard-version": "^9.3.2",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.2.19",
     "ts-jest": "^26.5.0",
@@ -151,7 +152,6 @@
     "@mdx-js/react": "^1.6.21",
     "antd": "^3.23.4",
     "clsx": "^1.1.1",
-    "conventional-changelog-cli": "^2.0.28",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react-custom-scrollbars": "^4.2.1",
