--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "node-sass": "^4.13.1",
     "postcss": "^8.3.11",
     "react": "^16.9.0",
+    "react-docgen": "^5.4.0",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^16.9.0",
     "react-styleguidist": "^10.6.1",
