config: add npm package multi entry points

--- a/package.json
+++ b/package.json
@@ -171,5 +171,10 @@
   },
   "engines": {
     "node": "12.x || 14.x"
+  },
+  "exports": {
+    ".": "./dist/index.js",
+    "./icons": "./dist/icons/index.js",
+    "./styles": "./dist/styles/index.js"
   }
 }
