--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
   },
   "files": [
     "dist",
-    "lib",
-    "!dist/test",
-    "!dist/types"
+    "styles.js",
+    "icons.js"
   ],
   "scripts": {
     "test": "jest",
