--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
   },
   "files": [
     "dist",
-    "lib",
-    "!dist/test",
-    "!dist/types"
+    "styles.js",
+    "icons.js"
   ],
   "scripts": {
     "test": "jest",
@@ -171,5 +170,10 @@
   },
   "engines": {
     "node": "12.x || 14.x"
+  },
+  "exports": {
+    ".": "./dist/index.js",
+    "./icons": "./dist/icons/index.js",
+    "./styles": "./dist/styles/index.js"
   }
 }
