--- a/package.json
+++ b/package.json
@@ -173,7 +173,7 @@
   },
   "exports": {
     ".": "./dist/index.js",
-    "./typography.css": "./dist/lwds.css",
+    "./typography.css": "./dist/typography.css",
     "./icons": "./dist/icons/index.js",
     "./styles": "./dist/styles/index.js"
   }
