--- a/.babelrc
+++ b/.babelrc
@@ -27,7 +27,8 @@
           "@src": "./src",
           "@assets": "./src/assets",
           "@components": "./src/components",
-          "@helpers": "./src/helpers"
+          "@helpers": "./src/helpers",
+          "@hooks": "./src/hooks"
         }
       }
     ]
