--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
       "@src/*": ["src/*"],
       "@assets/*": ["src/assets/*"],
       "@components/*": ["src/components/*"],
-      "@helpers/*": ["src/helpers/*"]
+      "@helpers/*": ["src/helpers/*"],
+      "@hooks/*": ["src/hooks/*"]
     }
   },
   // "include": ["typings", "src/**/*"],
