--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "webpack": "4.44.2"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^0.7.2",
     "@mdx-js/react": "^1.6.21",
     "antd": "^3.23.4",
     "clsx": "^1.1.1",
