--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lwds",
-  "version": "0.3.7",
+  "version": "0.3.8-0",
   "description": "Linewalks Design System",
   "keywords": [
     "lwds",
