--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "react-styleguidist": "^10.6.1",
     "react-test-renderer": "^16.8.6",
     "rollup": "^2.34.2",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "4.0",
     "rollup-plugin-sass-variables": "^0.1.1",
