--- a/package.json
+++ b/package.json
@@ -160,13 +160,15 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "@floating-ui/react-dom": "^0.7.2",
+    "@floating-ui/react-dom": "^1.0.0",
+    "@floating-ui/react-dom-interactions": "^0.10.0",
     "@mdx-js/react": "^1.6.21",
     "antd": "^3.23.4",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react-custom-scrollbars": "^4.2.1",
+    "react-merge-refs": "^2.0.1",
     "react-transition-group": "^4.3.0",
     "recharts": "1.8.5",
     "regenerator-runtime": "^0.13.7",
