--- a/package.json
+++ b/package.json
@@ -187,7 +187,8 @@
     "node": "12.x || 14.x"
   },
   "exports": {
-    ".": "./dist/app/index.js",
+    ".": "./dist/index.js",
+    "./lwds.css": "./dist/index.css",
     "./typography.css": "./dist/typography.css",
     "./icons": "./dist/icons/index.js",
     "./styles": "./dist/styles/index.js"
