--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lwds",
-  "version": "0.3.20",
+  "version": "0.3.19",
   "description": "Linewalks Design System",
   "keywords": [
     "lwds",
@@ -43,7 +43,7 @@
     "test:watch": "jest --watch --coverage",
     "build": "rm -rf dist && rollup -c",
     "build:prod": "NODE_ENV=production yarn build",
-    "styleguide": "NODE_OPTIONS=--openssl-legacy-provider FAST_REFRESH=false styleguidist server ",
+    "styleguide": "FAST_REFRESH=false styleguidist server",
     "build:docs": "styleguidist build",
     "build:commit": "git add . && git commit -m \"chore(build): build\"",
     "eslint": "eslint ./src/**/*.js ./src/**/**/*.js",
@@ -131,13 +131,14 @@
     "lint-staged": "^9.4.3",
     "mini-css-extract-plugin": "1.0.0",
     "minimist": "^1.2.2",
+    "node-sass": "^4.13.1",
     "postcss": "^8.3.11",
     "postcss-loader": "4.0",
     "react": "^16.9.0",
     "react-docgen": "^5.4.0",
     "react-docgen-typescript": "^2.2.2",
     "react-dom": "^16.9.0",
-    "react-styleguidist": "^11.2.0",
+    "react-styleguidist": "^10.6.1",
     "react-test-renderer": "^16.8.6",
     "rollup": "^2.34.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -145,7 +146,6 @@
     "rollup-plugin-sass-variables": "^0.1.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.0",
-    "sass": "^1.56.1",
     "sass-loader": "^10.0.4",
     "sass-variables-loader": "^0.1.3",
     "scheduler": "0.14.0",
@@ -169,7 +169,6 @@
     "prop-types": "^15.7.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-merge-refs": "^2.0.1",
-    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.3.0",
     "recharts": "1.8.5",
     "regenerator-runtime": "^0.13.7",
@@ -185,11 +184,12 @@
     "typescript": "^4.1.2"
   },
   "engines": {
-    "node": "14.x || 16.x || 18.x"
+    "node": ">=14.0.0"
   },
   "exports": {
     ".": "./dist/index.js",
     "./lwds.css": "./dist/index.css",
+    "./typography.css": "./dist/typography.css",
     "./icons": "./dist/icons/index.js",
     "./styles": "./dist/styles/index.js"
   }
