--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
       "^@components(.*)$": "<rootDir>/src/components/$1",
       "^@helpers(.*)$": "<rootDir>/src/helpers/$1",
       "^@hooks(.*)$": "<rootDir>/src/hooks/$1",
+      "^@types(.*)$": "<rootDir>/src/types/$1",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less|sass|scss)$": "identity-obj-proxy"
     },
